Supposedly allow fork PRs to have their tests run. (#412)
Co-authored-by: Utkarsh Dalal <utkarsh.dalal@toptal.com>

--- a/.github/workflows/pluvia-pr-check.yml
+++ b/.github/workflows/pluvia-pr-check.yml
@@ -23,6 +23,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Inject credentials
+        if: github.event.pull_request.head.repo.full_name == github.repository
         run: |
           cat <<EOF > local.properties
           POSTHOG_API_KEY=${{ secrets.POSTHOG_API_KEY }}
